<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvNameRepo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/nunito"
        android:text="@string/repo_name"
        android:textColor="@color/github_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="100dp" />

    <TextView
        android:id="@+id/tvDescRepo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:text="@string/desc"
        android:textStyle="normal"
        android:textColor="@color/github_black1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNameRepo"
        android:layout_marginRight="100dp" />

    <TextView
        android:id="@+id/tvLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/language"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescRepo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_star"
        android:text="@string/stargazers_count"
        android:textColor="@color/github_black1"
        android:drawableTint="@color/github_black1"
        app:layout_constraintStart_toEndOf="@id/tvLanguage"
        app:layout_constraintTop_toBottomOf="@id/tvDescRepo"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/tvStar"
        android:drawableLeft="@drawable/ic_star"
        android:layout_marginLeft="10dp" />
    <TextView
        android:id="@+id/tvTimeRepo"
        app:layout_constraintStart_toEndOf="@id/tvStar"
        app:layout_constraintTop_toBottomOf="@id/tvDescRepo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/updated_at"
        android:textColor="@color/github_black1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        app:layout_constraintTop_toBottomOf="@id/tvLanguage"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>