<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.DetailUserActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/github_black2"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="11dp"
                android:layout_marginLeft="12dp"
                android:fontFamily="@font/nunito"
                android:text="@string/title_detail"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </FrameLayout>

    </androidx.appcompat.widget.Toolbar>





    <RelativeLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@android:color/darker_gray"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:id="@+id/ll_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_avatar"
            android:layout_toRightOf="@id/img_avatar"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nunito"
                android:lines="1"
                android:text="@string/github_users"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/username_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:lines="1"
                android:text="@string/github_username" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/email"
                android:textSize="12sp"
                app:drawableLeftCompat="@drawable/ic_email"
                app:drawableStartCompat="@drawable/ic_email" />

            <TextView
                android:id="@+id/tv_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/url"
                android:textSize="12sp"
                app:drawableLeftCompat="@drawable/ic_link"
                app:drawableStartCompat="@drawable/ic_link" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/bio" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvFollow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/follows"
                    android:textSize="12sp"
                    app:drawableLeftCompat="@drawable/ic_people"
                    app:drawableStartCompat="@drawable/ic_people" />

                <TextView
                    android:id="@+id/tvRepo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/repo"
                    android:textSize="12sp"
                    app:drawableLeftCompat="@drawable/ic_star"
                    app:drawableStartCompat="@drawable/ic_star" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs" />

    <ToggleButton
        android:id="@+id/toggle_favorite"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/favorite_toggle"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textOff=""
        android:textOn=""
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>