<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/github_black2"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="11dp"
                android:layout_marginLeft="12dp">

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:text="@string/title_setting"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </FrameLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:drawableLeft="@drawable/ic_notifications_black"
            android:drawablePadding="15dp"
            android:drawableTint="@color/github_black1"
            android:text="Set Reminder"
            android:textColor="@color/github_black1"
            android:textOff="OFF"
            android:textOn="ON"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tvSelectLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:drawableStart="@drawable/ic_bahasa_black"
            android:drawableLeft="@drawable/ic_bahasa_black"
            android:drawablePadding="15dp"
            android:drawableTint="@color/github_black1"
            android:gravity="center"
            android:text="@string/select_language"
            android:textColor="@color/github_black1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvFavoriteUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:drawableStart="@drawable/ic_favorite_grey"
            android:drawableLeft="@drawable/ic_favorite_grey"
            android:drawablePadding="15dp"
            android:drawableTint="@color/github_black1"
            android:gravity="center"
            android:text="@string/title_favorite"
            android:textColor="@color/github_black1"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="12dp"
            android:background="@color/github_black1" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/copykanan"
            android:textAlignment="center"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>